--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name": "bl0g",
-  "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -11,7 +10,8 @@
   "dependencies": {
     "next": "11.0.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "water.css": "^2.0.0"
   },
   "devDependencies": {
     "eslint": "7.32.0",
