--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "next": "11.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-markdown": "^7.0.0",
+    "remark-gfm": "^2.0.0",
     "water.css": "^2.0.0"
   },
   "devDependencies": {
