--- a/package.json
+++ b/package.json
@@ -8,11 +8,10 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "11.0.1",
+    "next": "^11.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-markdown": "^7.0.0",
-    "remark-gfm": "^2.0.0",
+    "react-markdown": "7.0.0",
     "water.css": "^2.0.0"
   },
   "devDependencies": {
