--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "postbuild": "next-sitemap",
     "start": "next start",
     "lint": "next lint"
   },
@@ -11,6 +12,7 @@
     "dotenv": "^14.3.0",
     "logrocket": "^2.1.3",
     "next": "^11.1.0",
+    "next-sitemap": "^2.5.15",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-markdown": "7.0.0",
